[project]
name = "openlimit"
version = "0.3.0"
requires-python = ">=3.9"
dependencies = [
    "redis>=5",
    "tiktoken>=0.5",
    "typing-extensions>=4.12.2",
]

[tool.pyright]
typeCheckingMode = "strict"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.387",
    "pytest>=8.3.3",
    "ruff>=0.7.2",
]
